fixes scrollbar color

--- a/src/styles/modules/scrollbar.css
+++ b/src/styles/modules/scrollbar.css
@@ -1,15 +1,9 @@
-::-webkit-scrollbar {
-  width: 7px;
-  height: 10px;
-}
-
 ::-webkit-scrollbar-track {
   border-radius: 15px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.12);
   margin: 0 15px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 15px;
-  background-color: rgba(0, 0, 0, 0.2);
 }
